charts/backend/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: backend
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: backend
          image: sudokuacr.azurecr.io/backend:v0.1.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: 200m
              memory: 400Mi
            requests:
              cpu: 100m
              memory: 200Mi
